# ReelsNote.ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  share-copy.txt
.github/workflows/: send-notes-telegram.yml
output/Video by aicoreknowledge/: info.json  transcript.txt  video.info.json
output/Video by code_with_gary/: info.json  video.info.json
src/helpers/: pdf_converter.py  reel_scrapper.py  report_generator.py  video_explainer.py
src/pipeline/: pipeline.py
src/settings/: settings.py
src/state/: states.py
src/utils/: http.py  logging_config.py  paths.py
