[project]
name = "reelsnote-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "openai-whisper>=20250625",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
]
