[project]
name = "reelsnote-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.0",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "openai>=2.45.0",
    "openai-whisper>=20250625",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "torch>=2.5.0",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
]

# Define the PyTorch CUDA 12.4 index
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Force uv to pull 'torch' (and related packages if needed) from this index
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
